--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -50,7 +50,7 @@ export async function registerCustomElements() {
         We build technology that builds soil. Both as in facilitating the growth of actual local soil ecology and as a metaphor of human relating. 
       </p>
     </div>
-    <img src="resolve:#src/images/details-1.svg" alt="alternative" width="146" height="150" />
+    <img src="resolve:#src/images/darksoilAI.png" alt="alternative" width="146" height="150" />
   </rocket-columns>
 </rocket-content-area>
 
@@ -59,13 +59,22 @@ export async function registerCustomElements() {
     <div>
       <h2 id="how-we-work" link-text="How We Work">How We Work</h2>
       <p>
-        Our work is focused around creating small and modular tools that afford groups stronger collaboration and deeper relationships. We want to make sure that digital tools are first and foremost a way for people to get their needs filled outside of the digital world. We operate under the understanding that as we move towards a richer and richer ecosystem of tools available, that can be trivially installed and used by any existing groups, the higher the benefit of any one of the individual tools become. Our goal is to utilize a network effect, not by monopolizing other peoples social graphs, but by letting real world social groups mirror themselves online and supplying them with increasingly useful software to cohere. An introductory article on this perspective can be found <a href="https://zaunders.medium.com/distributed-online-life-1dd64e7474ec">here</a>.
+        Our work is focused around creating small and modular tools that afford groups stronger collaboration and deeper relationships. We want to make sure that digital tools are first and foremost a way for people to get their needs filled outside of the digital world. 
         <br>
         <br>
-        When we create software, we are careful to build directly for contexts that are asking for the software that we are building. This way of working ensures that we create things that are wanted in the world. However, as we build the tools we take care to architect and design them in such a way that they will be useful outside of the target context that we are building for. Along with the creation of the software, we spend a lot of time relating the stories of why we are building the things we are building and making sure that we make explicit how we aim to be of service both to the larger Holochain ecosystem but also to the larger planetary whole that we are all a part of.
+        We operate under the understanding that as we move towards a richer and richer ecosystem of tools available, that can be trivially installed and used by any existing groups, the higher the benefit of any one of the individual tools become. 
+        <br>
+        <br>
+        Our goal is to utilize a network effect, not by monopolizing other peoples social graphs, but by letting real world social groups mirror themselves online and supplying them with increasingly useful software to cohere. An introductory article on this perspective can be found <a href="https://zaunders.medium.com/distributed-online-life-1dd64e7474ec">here</a>.
+        <br>
+        <br>
+        When we create software, we are careful to build directly for contexts that are asking for the software that we are building. This way of working ensures that we create things that are wanted in the world. However, as we build the tools we take care to architect and design them in such a way that they will be useful outside of the target context that we are building for. 
+        <br>
+        <br>
+        Along with the creation of the software, we spend a lot of time relating the stories of why we are building the things we are building and making sure that we make explicit how we aim to be of service both to the larger Holochain ecosystem but also to the larger planetary whole that we are all a part of.
       </p>
     </div>
-    <img src="resolve:#src/images/details-1.svg" alt="alternative" width="146" height="150" />
+    <img src="resolve:#src/images/toolslarger.jpg" alt="alternative" width="146" height="150" />
   </rocket-columns>
 </rocket-content-area>
 
@@ -104,7 +113,7 @@ export async function registerCustomElements() {
         Bookings and sharing module     
         <br />
         <br />
-         Software for enabling bookings of things like rooms, tools or vehicles
+         Software for enabling bookings of things like rooms, tools or vehicles. 
       </p>
     
     </rocket-card>
@@ -149,12 +158,24 @@ export async function registerCustomElements() {
     <div>
       <h2 id="funding" link-text="Funding">Funding</h2>
       <p>
-        At darksoil we want to create the best possible open source software to empower groups to function more joyously and harmoniously together. Our aim is to be able to use the amazing power of the Holochain framework so that people can freely create groups and use all of the powerful modular tools that we are developing as they please. We want to offer these tools to everyone who sees that they can enrich themselves and the larger systems they are a part of freely. In order for us to be able to continue to do so we seek reciprocity from the communities that benefit and from any person or organization that can see the value that we are creating.
+        At darksoil we want to create the best possible open source software to empower groups to function more joyously and harmoniously together. 
         <br>
         <br>
-        We have set up an <a href="https://opencollective.com/emerging-integrity">open collective</a> as an efficient and transparent way to receive financial support for the work we are doing. If the way we are working towards a regenerative human presence on the planet resonates with you, please consider making a small or large, one time or recurring contribution to <a href="https://opencollective.com/darksoil">our collective</a>. You can contribute generally to our work or to an individual project directly. All of our work is transparently invoiced to the collective and visible on the open collective page so you can see directly what your support is enabling.
+        Our aim is to be able to use the amazing power of the Holochain framework so that people can freely create groups and use all of the powerful modular tools that we are developing as they please. 
+        <br>
+        <br>
+        We want to offer these tools to everyone who sees that they can enrich themselves and the larger systems they are a part of freely. 
+        <br>
+        <br>
+        In order for us to be able to continue to do so we seek reciprocity from the communities that benefit and from any person or organization that can see the value that we are creating.
+        <br>
+        <br>
+        We have set up an <a href="https://opencollective.com/darksoil">open collective</a> as an efficient and transparent way to receive financial support for the work we are doing. If the way we are working towards a regenerative human presence on the planet resonates with you, please consider making a small or large, one time or recurring contribution to <a href="https://opencollective.com/darksoil">our collective</a>. You can contribute generally to our work or to an individual project directly. 
+        <br>
+        <br>
+        All of our work is transparently invoiced to the collective and visible on the open collective page so you can see directly what your support is enabling.
       </p>
     </div>
-    <img src="resolve:#src/images/details-1.svg" alt="alternative" width="146" height="150" />
+    <img src="resolve:#src/images/water2.jpg" alt="alternative" width="146" height="150" />
   </rocket-columns>
 </rocket-content-area>
