--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -33,7 +33,7 @@ export async function registerCustomElements() {
   <rocket-columns>
     <div style="padding-top: 100px">
       <h1>darksoil studio</h1>
-      <p style="width: 600px">We create little interoperable apps for place-based groups to fulfill their basic needs. We use Holochain as a distributed data integrity layer.</p>
+      <p>We create little interoperable apps for place-based groups to fulfill their basic needs. We use Holochain as a distributed data integrity layer.</p>
     </div>
 
   </rocket-columns>
