--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -88,7 +88,7 @@ export async function registerCustomElements() {
     <rocket-card>
       <h4 slot="title">Cornucopia</h4>
       <p>
-        Local collective purchasing of food
+        <a href="https://hackmd.io/@zaunders/r1MNpa97o">Local collective purchasing of food</a>
         <br />
         <br />
         A tool for groups to purchase food directly from producers with as little overhead as possible, so that the producers have more time to tend to their ecosystems instead of marketing products and managing distribution systems.
@@ -99,7 +99,7 @@ export async function registerCustomElements() {
     <rocket-card>
       <h4 slot="title">Gather</h4>
       <p>
-        Event creation and management
+        <a href="https://hackmd.io/@zaunders/r1MNpa97o">Event creation and management</a>
         <br />
         <br />
         An event management app so that you can set up, find, manage and join events that happen within your group. 
@@ -110,7 +110,7 @@ export async function registerCustomElements() {
     <rocket-card>
       <h4 slot="title">Bookie</h4>
       <p>
-        Bookings and sharing module     
+        <a href="https://hackmd.io/@6-hJufPpTtyYR7BQhAo1BQ/r1h6lE0J9">Bookings and sharing module</a>
         <br />
         <br />
          Software for enabling bookings of things like rooms, tools or vehicles. 
