--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -88,7 +88,7 @@ export async function registerCustomElements() {
     <rocket-card>
       <h4 slot="title">Cornucopia</h4>
       <p>
-        <a href="https://hackmd.io/@zaunders/r1MNpa97o">Local collective purchasing of food</a>
+        <a href="https://hackmd.io/@zaunders/H1AkT3yU5">Local collective purchasing of food</a>
         <br />
         <br />
         A tool for groups to purchase food directly from producers with as little overhead as possible, so that the producers have more time to tend to their ecosystems instead of marketing products and managing distribution systems.
