--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -26,7 +26,7 @@ export async function registerCustomElements() {
   });
 
   export const title = 'darksoil studio';
-  export const description = 'Everyone can code a website!';
+  export const description = 'We create little interoperable apps for place-based groups to fulfill their basic needs';
 </script>
 
 <rocket-content-area>
