--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -47,7 +47,7 @@ export async function registerCustomElements() {
         We are here to help grow the capacity of people to collaborate on satisfying their needs in ther physical reality.
         <br>
         <br>
-        We build technology that builds soil. Both as in facilitating the growth of actual local soil ecology and as a metaphor of human relating. 
+        We build technology that builds soil, deep dark soil. Both as in facilitating the growth of actual local soil ecology and as a metaphor of human relating. 
       </p>
     </div>
     <img src="resolve:#src/images/darksoilAI.png" alt="alternative" width="146" height="150" />
