--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -33,7 +33,7 @@ export async function registerCustomElements() {
   <rocket-columns>
     <div style="padding-top: 100px">
       <h1>darksoil studio</h1>
-      <p>We create little interoperable apps for place-based groups to fulfill their basic needs. We use Holochain as a distributed data integrity layer.</p>
+      <p>We create simple peer to peer apps for place-based communities to meet their real, non-digital needs. We use Holochain as a distributed data integrity layer.</p>
     </div>
 
   </rocket-columns>
@@ -42,12 +42,9 @@ export async function registerCustomElements() {
 <rocket-content-area>
   <rocket-columns>
     <div>
-      <h2 id="about-us" link-text="About Us">About Us</h2>
+      <h2 id="about-us" link-text="About Us">about Us</h2>
       <p>
-        We are here to help grow the capacity of people to collaborate on satisfying their needs in ther physical reality.
-        <br>
-        <br>
-        We build technology that builds soil, deep dark soil. Both as in facilitating the growth of actual local soil ecology and as a metaphor of human relating. 
+        We are here to make tools that build soil. Tools that can be used by people to support the growth of deep dark soil, ecologically and socially. 
       </p>
     </div>
     <img src="resolve:#src/images/darksoilAI.png" alt="alternative" width="146" height="150" />
@@ -57,12 +54,12 @@ export async function registerCustomElements() {
 <rocket-content-area>
   <rocket-columns>
     <div>
-      <h2 id="how-we-work" link-text="How We Work">How We Work</h2>
+      <h2 id="how-we-work" link-text="How We Work">how we work</h2>
       <p>
-        Our work is focused around creating small and modular tools that afford groups stronger collaboration and deeper relationships. We want to make sure that digital tools are first and foremost a way for people to get their needs filled outside of the digital world. 
+        We want digital tools that are first and foremost a way for people to get their needs met outside of the digital world. For us that means building small, interoperable, fully distributed apps that enable groups to capture and ground emergent properties for organizing, collaborating, and connecting.  
         <br>
         <br>
-        We operate under the understanding that as we move towards a richer and richer ecosystem of tools available, that can be trivially installed and used by any existing groups, the higher the benefit of any one of the individual tools become. 
+        When we create open-source software, we are careful to build directly for contexts that are asking for the software that we are building, in direct relationship with the users. Not imaginary users. This way of working ensures that we create things that are wanted in the world. We hope it also makes it easier to orient towards meeting real needs, rather than manufactured ones. As we build the tools we take care to architect and design them in such a way that they can be easily adapted for and by other users and communities. 
         <br>
         <br>
         Our goal is to utilize a network effect, not by monopolizing other peoples social graphs, but by letting real world social groups mirror themselves online and supplying them with increasingly useful software to cohere. An introductory article on this perspective can be found <a href="https://zaunders.medium.com/distributed-online-life-1dd64e7474ec">here</a>.
