changed gather link to repo

--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -96,7 +96,7 @@ export async function registerCustomElements() {
     <rocket-card>
       <h4 slot="title">Gather</h4>
       <p>
-        <a href="https://hackmd.io/@zaunders/r1MNpa97o">Event creation and management</a>
+        <a href="https://github.com/darksoil-studio/gather">Event creation and management</a>
         <br />
         <br />
         An event management app so that you can set up, find, manage and join events that happen within your group. 
