--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -33,7 +33,7 @@ export async function registerCustomElements() {
   <rocket-columns>
     <div style="padding-top: 100px">
       <h1>darksoil studio</h1>
-      <p>WWe make simple peer to peer apps for groups of people to meet their non-digital needs.</p>
+      <p>We make simple peer to peer apps for groups of people to meet their non-digital needs.</p>
     </div>
 
   </rocket-columns>
@@ -216,7 +216,7 @@ export async function registerCustomElements() {
       <p>
         Bear develops our team and business. 
         <br><br>
-        He and upholding strategies and connections internally and with our partners, with an emphasis on relationships as the foundation for human systems. He cofounded a global network of schools called <a href="http://agilelearningcenters.org/">Agile Learning Centers</a> and is the director of ecosystem growth at Holochain. 
+        He is upholding strategies and connections internally and with our partners, with an emphasis on relationships as the foundation for human systems. He cofounded a global network of schools called <a href="http://agilelearningcenters.org/">Agile Learning Centers</a> and is the director of ecosystem growth at Holochain. 
         <br><br>
         Bear wants to be a good ant by fostering play, relationship and agency in the world.
       </p>
