--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -151,8 +151,6 @@ export async function registerCustomElements() {
         <br>
         <a href="">co-budget</a> - (port to holochain)
         <br>
-        coach - 
-        <br>
         mutual-credit - basic mutual credit module
         <br>
         learn - peer to peer learning pathways
@@ -171,9 +169,7 @@ export async function registerCustomElements() {
         <br>
         story: how does Holochain work - graphical descriptions
         <br>
-        puzzles - 
-        <br>
-        scotty panel -
+        puzzles & scotty panel - playground extentions
       </p>
     </div>
     <img src="resolve:#src/images/water2.jpg" alt="alternative" width="146" height="150" />
@@ -249,3 +245,18 @@ export async function registerCustomElements() {
   </rocket-columns>
 </rocket-content-area>
 
+
+<rocket-content-area>
+  <rocket-columns>
+    <div>
+      <h2 id="connect" link-text="connect">connect</h2>
+      <p>
+        Read our stories on <a href="https://darksoil.substack.com">substack</a>.
+        <br>
+        <br>
+        Get in touch with us through <a href="mailto:hello@darksoil.com">hello@darksoil.com</a>
+        
+      </p>
+    </div>
+  </rocket-columns>
+</rocket-content-area>
