--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -254,7 +254,7 @@ export async function registerCustomElements() {
         Read our stories on <a href="https://darksoil.substack.com">substack</a>.
         <br>
         <br>
-        Get in touch with us through <a href="mailto:hello@darksoil.com">hello@darksoil.com</a>
+        Get in touch with us through <a href="mailto:hello@darksoil.studio>hello@darksoil.studio</a>
         
       </p>
     </div>
