--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -228,6 +228,8 @@ export async function registerCustomElements() {
         Passionate about learning and teaching, Guillem is moved by a desire to support the creative and collaborative side of all people.
       </p>
     </rocket-card>
+      </rocket-columns>
+    <rocket-columns>
 
     <rocket-card>
       <h4 slot="title">Eric Bear</h4>
