--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -102,6 +102,7 @@ export async function registerCustomElements() {
       <h2 id="approach" link-text="approach to software">approach to software</h2>
   <rocket-columns>
     <div>
+      <h3>for communities</h3>
       <p>
         We make it simple for existing groups to make self-sovereign digital spaces that are owned and evolvable by the group itself.   
         <br>
@@ -139,7 +140,6 @@ export async function registerCustomElements() {
     <div>
       <p>
         <h3>apps & modules</h3>
-        <br>
         plenty - collective purchasing of food
         <br>
         <a href="">co-budget</a> - (port to holochain)
