--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -31,7 +31,7 @@ export async function registerCustomElements() {
   </div>
   <div class="parallax__layer parallax__layer--base">
 
-<rocket-content-area>
+<rocket-content-area style="padding-top: 20px;">
   <rocket-columns>
     <div style="height: 100vh; display: flex; flex-direction: column; align-items:start; justify-content: center">
       <h1>darksoil studio</h1>
@@ -68,12 +68,11 @@ export async function registerCustomElements() {
 
     <rocket-card>
       <h4 slot="title">fixie</h4>
-      <p>
+        <br />
         <a href="">collect your bugs to give hApps hugs</a>
         <br />
-        <br />
+      <p>
         Oh, it’s just a fully distributed issue tracker to save many thousands of hours of work for devs who are building Holochain Apps. Making debugging of distributed apps orders of magnitudes easier. nbd.
-
       </p>
     
     </rocket-card>
@@ -81,14 +80,14 @@ export async function registerCustomElements() {
 
     <rocket-card>
       <h4 slot="title">gather</h4>
-      <p>
+    <br>
         <a href="https://github.com/darksoil-studio/gather">I can see that you are free<br>
           and you can see the same of me<br>
           so we agree we’d like to be<br>
           out on the court at 2:03
           </a>
         <br />
-        <br />
+        <p>
         Software for co-creating, accessing, and managing emergent events. It could be a meeting for a project, practice session for a martial art, gaming session, hobby hangout, or a big celebration. Gather lets you see and actualize previously invisible possibilities for coming together with the people in your life around the things you care about.
       </p>
     
@@ -138,8 +137,8 @@ export async function registerCustomElements() {
       <h2 id="projects_on_deck" link-text="projects on deck">projects on deck</h2>
   <rocket-columns>
     <div>
-      <p>
         <h3>apps & modules</h3>
+      <p>
         plenty - collective purchasing of food
         <br>
         <a href="">co-budget</a> - (port to holochain)
@@ -153,9 +152,10 @@ export async function registerCustomElements() {
         tooltool - tool sharing
         <br>
         ourtime - scheduling of group tasks
-        <br>
+      </p>
 </div><div>
         <h3>holochain core tooling</h3>
+      <p>
         mobile - mobile support for holochain
         <br>
         hApp designer hApp - simplify app creation
