--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -152,7 +152,7 @@ export async function registerCustomElements() {
                     --primary-color: var(white);
                   "
                   name="npm"
-                  url="https://npmjs.com/packages/@holochain-playground/cli"
+                  url="https://npmjs.com/package/@holochain-playground/cli"
                 ></custom-social-link>
               </div>
             </div>
@@ -162,10 +162,8 @@ export async function registerCustomElements() {
               style="align-items: center; justify-content: center"
             >
               <p class="poem">
-                playing around,<br />
-                just having fun,<br />
-                you'll understand,<br />
-                what holochain's about
+                a playground place so you can say:<br />
+                with holochain it's fun to play!
               </p>
               <br />
               <p>
