--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -1,20 +1,20 @@
 <script type="module" server>
-  /* START - Rocket auto generated - do not touch */
-  export const sourceRelativeFilePath = "index.rocket.html";
-  import { components } from "./recursive.data.js";
-  export { components };
-  export async function registerCustomElements() {
-    // server-only components
-    // prettier-ignore
-    customElements.define('rocket-content-area', await import('@rocket/components/content-area.js').then(m => m.RocketContentArea));
-    // prettier-ignore
-    customElements.define('rocket-header-scroll-menu', await import('@rocket/components/header-scroll-menu.js').then(m => m.RocketHeaderScrollMenu));
-    // prettier-ignore
-    customElements.define('rocket-columns', await import('@rocket/components/columns.js').then(m => m.RocketColumns));
-    // prettier-ignore
-    customElements.define('rocket-card', await import('@rocket/components/card.js').then(m => m.RocketCard));
-  }
-  /* END - Rocket auto generated - do not touch */
+/* START - Rocket auto generated - do not touch */
+export const sourceRelativeFilePath = 'index.rocket.html';
+import { components } from './recursive.data.js';
+export { components };
+export async function registerCustomElements() {
+  // server-only components
+  // prettier-ignore
+  customElements.define('rocket-content-area', await import('@rocket/components/content-area.js').then(m => m.RocketContentArea));
+  // prettier-ignore
+  customElements.define('rocket-header-scroll-menu', await import('@rocket/components/header-scroll-menu.js').then(m => m.RocketHeaderScrollMenu));
+  // prettier-ignore
+  customElements.define('rocket-columns', await import('@rocket/components/columns.js').then(m => m.RocketColumns));
+  // prettier-ignore
+  customElements.define('rocket-card', await import('@rocket/components/card.js').then(m => m.RocketCard));
+}
+/* END - Rocket auto generated - do not touch */
 
   import "#src/elements/custom-social-link.js";
   import { LayoutHome } from "@rocket/spark";
@@ -91,24 +91,20 @@
     </rocket-content-area>
 
     <rocket-content-area>
-      <rocket-columns>
-        <div>
-          <h2 id="what-we-do" link-text="what we do">what we do</h2>
-          <p>
-            We make tools for people to grow deep dark soil, ecologically and
-            socially.
-            <br />
-            <br />
-            We build small, interoperable, fully distributed apps that enable
-            groups to access emergent properties for organizing, collaborating,
-            and connecting. We build open source software on Holochain.
-            <br />
-            <br />
-            We also build tools to increase the accessibility and functionality
-            of the Holochain core codebase.
-          </p>
-        </div>
-      </rocket-columns>
+      <h2 id="what-we-do" link-text="what we do">what we do</h2>
+      <p>
+        We make tools for people to grow deep dark soil, ecologically and
+        socially.
+        <br />
+        <br />
+        We build small, interoperable, fully distributed apps that enable groups
+        to access emergent properties for organizing, collaborating, and
+        connecting. We build open source software on Holochain.
+        <br />
+        <br />
+        We also build tools to increase the accessibility and functionality of
+        the Holochain core codebase.
+      </p>
     </rocket-content-area>
 
     <rocket-content-area>
@@ -119,7 +115,6 @@
       >
         things we've made
       </h2>
-      <br />
 
       <rocket-columns>
         <div>
@@ -162,22 +157,15 @@
                 ></custom-social-link>
               </div>
             </div>
-            <br />
-            <div
-              class="colum"
-              style="align-items: center; justify-content: center"
-            >
-              <p class="poem">
-                a playground place so you can say:<br />
-                with holochain it's fun to play!
-              </p>
-              <br />
-              <p>
-                The playground is a suite of tools to simulate, introspect, and
-                play around holochain. It enables developers and architects to
-                see and interact with what's happening behind the scenes.
-              </p>
-            </div>
+            <p class="poem">
+              a playground place so you can say:<br />
+              with holochain it's fun to play!
+            </p>
+            <p>
+              The playground is a suite of tools to simulate, introspect, and
+              play around holochain. It enables developers and architects to see
+              and interact with what's happening behind the scenes.
+            </p>
           </rocket-card>
         </div>
       </rocket-columns>
@@ -204,9 +192,7 @@
               ></custom-social-link>
             </div>
           </div>
-          <br />
           <p class="poem">collect your bugs to give hApps hugs</p>
-          <br />
           <p>
             Oh, it’s just a fully distributed issue tracker to save many
             thousands of hours of work for devs who are building Holochain Apps.
@@ -235,14 +221,12 @@
               ></custom-social-link>
             </div>
           </div>
-          <br />
           <p class="poem">
             I can see that you are free<br />
             and you can see the same of me<br />
             so we agree we’d like to be<br />
-            out on the court at 2:03
+            out in the park at 2:03
           </p>
-          <br />
           <p>
             Software for co-creating, accessing, and managing emergent events.
             It could be a meeting for a project, practice session for a martial
@@ -259,49 +243,31 @@
       <h2 id="approach" link-text="approach to software">
         approach to software
       </h2>
-      <rocket-columns>
-        <div>
-          <p>
-            We make it simple for existing groups to make self-sovereign digital
-            spaces that are owned and evolvable by the group itself.
-            <br />
-            <br />
-            We build software for ourselves and the groups we’re a part of,
-            taking care that it be easily adaptable for and by others.
-            <br />
-            <br />
-            darksoil applications make it easier to see and engage with more
-            nuance and acuity to do/create/have more of what we want with our
-            groups with less administrative burden.
-            <br />
-            <br />
-            We test our software with our communities; our farms, villages,
-            movement collectives, hackerspaces, businesses, cooperatives, friend
-            groups, etc. We need the things we’re building because it’s a
-            headache that we don’t already have them. When what we build works
-            for our communities, we partner with people to adapt and integrate
-            it to work for their communities.
-            <br />
-            <br />
-            Sometimes, when we’re inspired by the partnership, we make things
-            for others before we make them for ourselves.
-          </p>
-        </div>
-        <div>
-          <p>
-            We tell stories about our lives now and in the very near future;
-            stories about our homes, businesses, villages, etc.
-            <br />
-            <br />
-            We tell stories for you to imagine using our technology in your life
-            in the very near future.
-            <br />
-            <br />
-            We tell stories to bridge the gap between where we are now and the
-            worlds that we’re building these tools to live in.
-          </p>
-        </div>
-      </rocket-columns>
+      <p>
+        We make it simple for existing groups to make self-sovereign digital
+        spaces that are owned and evolvable by the group itself.
+        <br />
+        <br />
+        We build software for ourselves and the groups we’re a part of, taking
+        care that it be easily adaptable for and by others.
+        <br />
+        <br />
+        darksoil applications make it easier to see and engage with more nuance
+        and acuity to do/create/have more of what we want with our groups with
+        less administrative burden.
+        <br />
+        <br />
+        We test our software with our communities; our farms, villages, movement
+        collectives, hackerspaces, businesses, cooperatives, friend groups, etc.
+        We need the things we’re building because it’s a headache that we don’t
+        already have them. When what we build works for our communities, we
+        partner with people to adapt and integrate it to work for their
+        communities.
+        <br />
+        <br />
+        Sometimes, when we’re inspired by the partnership, we make things for
+        others before we make them for ourselves.
+      </p>
     </rocket-content-area>
 
     <rocket-content-area>
@@ -312,58 +278,64 @@
         <div>
           <h3>apps & modules</h3>
           <p>
-            plenty - collective purchasing of food
+            <strong>plenty</strong>
             <br />
-            <a href="">co-budget</a> - (port to holochain)
-            <br />
-            mutual-credit - basic mutual credit module
-            <br />
-            learn - peer to peer learning pathways
-            <br />
-            bookie - bookings module
-            <br />
-            tooltool - tool sharing
-            <br />
-            ourtime - scheduling of group tasks
+            collective purchasing of food
           </p>
+          <p>
+            <strong><a href="https://cobudget.com/">co-budget</a></strong
+            ><br />
+            port to holochain
+          </p>
+          <p>
+            <strong>assemble</strong>
+            <br />
+            proposals with needs, promises and commitments
+          </p>
+          <p>
+            <strong> mutual-credit</strong><br />
+            basic mutual credit module
+          </p>
+          <p><strong> learn</strong><br />peer to peer learning pathways</p>
+          <p><strong>bookie</strong><br />bookings module</p>
+          <p><strong> tooltool</strong><br />tool sharing</p>
+          <p><strong>ourtime</strong><br />scheduling of group tasks</p>
         </div>
         <div>
           <h3>holochain core tooling</h3>
           <p>
-            mobile - mobile support for holochain
-            <br />
-            hApp designer hApp - simplify app creation
-            <br />
-            story: how does Holochain work - graphical descriptions
-            <br />
-            puzzles & scotty panel - playground extentions
+            <strong>hApp designer hApp</strong><br />
+            simplify app creation
+          </p>
+          <p>
+            <strong>story</strong><br />
+            how does Holochain work & graphical descriptions
+          </p>
+          <p>
+            <strong>puzzles & scotty panel</strong><br />playground extentions
           </p>
         </div>
       </rocket-columns>
     </rocket-content-area>
 
     <rocket-content-area>
-      <rocket-columns>
-        <div>
-          <h2 id="work-with-us" link-text="work with us">work with us</h2>
-          <p>
-            Fund something you need on the lists above, or something you need
-            that should be on the lists.
-            <br />
-            <br />
-            Contract us to build our software into your pre-existing system and
-            maintain it.
-            <br />
-            <br />
-            Partner with us to build a business around our software, like a
-            meetup.com alternative built around gather.
-            <br />
-            <br />
-            Contribute to projects through the
-            <a href="https://opencollective.com/darksoil">open collective</a>.
-          </p>
-        </div>
-      </rocket-columns>
+      <h2 id="work-with-us" link-text="work with us">work with us</h2>
+      <p>
+        Fund something you need on the lists above, or something you need that
+        should be on the lists.
+        <br />
+        <br />
+        Contract us to build our software into your pre-existing system and
+        maintain it.
+        <br />
+        <br />
+        Partner with us to build a business around our software, like a
+        meetup.com alternative built around gather.
+        <br />
+        <br />
+        Contribute to projects through the
+        <a href="https://opencollective.com/darksoil">open collective</a>.
+      </p>
     </rocket-content-area>
 
     <rocket-content-area>
