--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -1,20 +1,20 @@
 <script type="module" server>
-/* START - Rocket auto generated - do not touch */
-export const sourceRelativeFilePath = 'index.rocket.html';
-import { components } from './recursive.data.js';
-export { components };
-export async function registerCustomElements() {
-  // server-only components
-  // prettier-ignore
-  customElements.define('rocket-content-area', await import('@rocket/components/content-area.js').then(m => m.RocketContentArea));
-  // prettier-ignore
-  customElements.define('rocket-header-scroll-menu', await import('@rocket/components/header-scroll-menu.js').then(m => m.RocketHeaderScrollMenu));
-  // prettier-ignore
-  customElements.define('rocket-columns', await import('@rocket/components/columns.js').then(m => m.RocketColumns));
-  // prettier-ignore
-  customElements.define('rocket-card', await import('@rocket/components/card.js').then(m => m.RocketCard));
-}
-/* END - Rocket auto generated - do not touch */
+  /* START - Rocket auto generated - do not touch */
+  export const sourceRelativeFilePath = "index.rocket.html";
+  import { components } from "./recursive.data.js";
+  export { components };
+  export async function registerCustomElements() {
+    // server-only components
+    // prettier-ignore
+    customElements.define('rocket-content-area', await import('@rocket/components/content-area.js').then(m => m.RocketContentArea));
+    // prettier-ignore
+    customElements.define('rocket-header-scroll-menu', await import('@rocket/components/header-scroll-menu.js').then(m => m.RocketHeaderScrollMenu));
+    // prettier-ignore
+    customElements.define('rocket-columns', await import('@rocket/components/columns.js').then(m => m.RocketColumns));
+    // prettier-ignore
+    customElements.define('rocket-card', await import('@rocket/components/card.js').then(m => m.RocketCard));
+  }
+  /* END - Rocket auto generated - do not touch */
 
   import "#src/elements/custom-social-link.js";
   import { LayoutHome } from "@rocket/spark";
@@ -217,7 +217,7 @@ export async function registerCustomElements() {
               <custom-social-link
                 style="--primary-text-color: white; --primary-color: var(white)"
                 name="OpenCollective"
-                url="https://opencollective.com/darksoil/projects/gather"
+                url="https://opencollective.com/darksoil/projects/wegather"
               ></custom-social-link>
             </div>
           </div>
