--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
   </div><!--/lit-part--><!--/lit-part-->
       </rocket-header-scroll-menu>
     <!--/lit-part-->
-        <!--lit-part UNbWrd8S5FY=--><main><!--lit-part--><!--lit-part KbjlHsLKOIQ=--><div class="parallax">
+        <!--lit-part UNbWrd8S5FY=--><main><!--lit-part--><!--lit-part v/zM/NNqmiM=--><div class="parallax">
   <div class="parallax__layer parallax__layer--back darksoil-background"></div>
   <div class="parallax__layer parallax__layer--base">
     <rocket-content-area style="padding-top: 20px"><template shadowroot="open" shadowrootmode="open"><style>
@@ -733,13 +733,13 @@
       <slot name="cta"></slot>
     <!--/lit-part--></template>
           <div slot="title" class="row card-title">
-            <h4>fixie</h4>
+            <h4>plenty</h4>
             <div class="row">
               <custom-social-link style="
                   margin-left: 16px;
                   --primary-text-color: white;
                   --primary-color: var(white);
-                " name="OpenCollective" url="https://opencollective.com/darksoil/projects/fixie"><template shadowroot="open" shadowrootmode="open"><style>
+                " name="Github" url="https://github.com/darksoil-studio/plenty"><template shadowroot="open" shadowrootmode="open"><style>
       :host {
         display: block;
         width: 30px;
@@ -768,18 +768,51 @@
         color: var(--primary-text-color);
       }
     </style><!--lit-part INm/5Wg+P5I=-->
-      <!--lit-node 0--><a class="social-link" href="https://opencollective.com/darksoil/projects/fixie" aria-label=" on OpenCollective" rel="noopener noreferrer" target="_blank" slot="social">
+      <!--lit-node 0--><a class="social-link" href="https://github.com/darksoil-studio/plenty" aria-label=" on Github" rel="noopener noreferrer" target="_blank" slot="social">
+        <span class="sr-only"><!--lit-part-->Github<!--/lit-part--></span>
+        <!--lit-node 3--><img src="https://cdn.simpleicons.org/github/white" <="" a="">
+    <!--/lit-part--></a></template></custom-social-link>
+              <custom-social-link style="
+                  --primary-text-color: white;
+                  --primary-color: var(white);
+                " name="OpenCollective" url="https://opencollective.com/darksoil/projects/plenty"><template shadowroot="open" shadowrootmode="open"><style>
+      :host {
+        display: block;
+        width: 30px;
+        height: 30px;
+        margin-right: 15px;
+      }
+      svg {
+        color: var(--primary-text-color);
+        transition: color 0.3s ease-in-out;
+      }
+      svg:hover {
+        color: var(--primary-color);
+      }
+      .sr-only {
+        position: absolute;
+        left: -10000px;
+        top: auto;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+      }
+      :host([dark-background]) svg {
+        color: #fff;
+      }
+      :host([dark-background]) svg:hover {
+        color: var(--primary-text-color);
+      }
+    </style><!--lit-part INm/5Wg+P5I=-->
+      <!--lit-node 0--><a class="social-link" href="https://opencollective.com/darksoil/projects/plenty" aria-label=" on OpenCollective" rel="noopener noreferrer" target="_blank" slot="social">
         <span class="sr-only"><!--lit-part-->OpenCollective<!--/lit-part--></span>
         <!--lit-node 3--><img src="https://cdn.simpleicons.org/opencollective/white" <="" a="">
     <!--/lit-part--></a></template></custom-social-link>
             </div>
           </div>
-          <p class="poem">collect your bugs to give hApps hugs</p>
+          <p class="poem">collective purchasing of food</p>
           <p>
-            Oh, it’s just a fully distributed issue tracker to save many
-            thousands of hours of work for devs who are building Holochain Apps.
-            Making debugging of distributed apps orders of magnitudes easier.
-            nbd.
+            plenty is a peer-to-peer app to manage food buyers clubs, so that eating amazing food from locally sourced producers becomes joyful, easy and cheap.
           </p>
         </rocket-card>
 
@@ -1010,9 +1043,9 @@
         <div>
           <h3>apps &amp; modules</h3>
           <p>
-            <strong>plenty</strong>
+            <strong>fixie</strong>
             <br>
-            collective purchasing of food
+            report and track bugs in a holochain app
           </p>
           <p>
             <strong><a href="https://cobudget.com/">co-budget</a></strong><br>
