--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -179,7 +179,7 @@ export async function registerCustomElements() {
       <rocket-columns>
         <rocket-card>
           <div slot="title" class="row card-title">
-            <h4>fixie</h4>
+            <h4>plenty</h4>
             <div class="row">
               <custom-social-link
                 style="
@@ -187,17 +187,22 @@ export async function registerCustomElements() {
                   --primary-text-color: white;
                   --primary-color: var(white);
                 "
+                name="Github"
+                url="https://github.com/darksoil-studio/plenty"
+              ></custom-social-link>
+              <custom-social-link
+                style="
+                  --primary-text-color: white;
+                  --primary-color: var(white);
+                "
                 name="OpenCollective"
-                url="https://opencollective.com/darksoil/projects/fixie"
+                url="https://opencollective.com/darksoil/projects/plenty"
               ></custom-social-link>
             </div>
           </div>
-          <p class="poem">collect your bugs to give hApps hugs</p>
+          <p class="poem">collective purchasing of food</p>
           <p>
-            Oh, it’s just a fully distributed issue tracker to save many
-            thousands of hours of work for devs who are building Holochain Apps.
-            Making debugging of distributed apps orders of magnitudes easier.
-            nbd.
+            plenty is a peer-to-peer app to manage food buyers clubs, so that eating amazing food from locally sourced producers becomes joyful, easy and cheap.
           </p>
         </rocket-card>
 
@@ -278,9 +283,9 @@ export async function registerCustomElements() {
         <div>
           <h3>apps & modules</h3>
           <p>
-            <strong>plenty</strong>
+            <strong>fixie</strong>
             <br />
-            collective purchasing of food
+            report and track bugs in a holochain app
           </p>
           <p>
             <strong><a href="https://cobudget.com/">co-budget</a></strong
